--- a/3d-transforms.css
+++ b/3d-transforms.css
@@ -57,4 +57,10 @@ label{
 
 input[type]{font:inherit;}
 label{font-family:monospace;}
-button{margin-top:20px; font:sans-serif; background-color:#03c; color:#fff;border:1px solid #03c}
+button{margin-top:20px; font-family:sans-serif; font-size: 1em; font-weight:bold; background-color:#03c; color:#fff;border:1px solid #03c}
+
+#error{
+	padding:.5em;
+	background: #FFC7A2;
+	border:2px solid #f60;
+}
